--- a/src/components/Payment.css
+++ b/src/components/Payment.css
@@ -1,3 +1,5 @@
+/* Payment.css */
+
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap");
 
 * {
@@ -6,6 +8,7 @@
 	box-sizing: border-box;
 	font-family: "Source Sans Pro", sans-serif;
 }
+
 body {
 	background-color: #dff9fb;
 	min-height: 100vh;
@@ -13,87 +16,94 @@ body {
 	flex-direction: column;
 	justify-content: center;
 }
+
 h1 {
 	text-align: center;
 	margin-top: 5rem;
 }
+
 p {
 	text-align: center;
 	margin-bottom: 4rem;
 }
+
 .pricing {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+}
 
-	.plan {
-		background-color: #fff;
-		padding: 2.5rem;
-		margin: 12px;
-		border-radius: 5px;
-		text-align: center;
-		transition: 0.3s;
-		cursor: pointer;
+.plan {
+	background-color: #fff;
+	padding: 2.5rem;
+	margin: 12px;
+	border-radius: 5px;
+	text-align: center;
+	transition: 0.3s;
+	cursor: pointer;
+}
 
-		h2 {
-			font-size: 22px;
-			margin-bottom: 12px;
-		}
+.plan.popular {
+	border: 2px solid #6ab04c;
+	position: relative;
+	transform: scale(1.08);
+}
 
-		.price {
-			margin-bottom: 1rem;
-			font-size: 30px;
-		}
+.plan.popular span {
+	position: absolute;
+	top: -20px;
+	left: 50%;
+	transform: translateX(-50%);
+	background-color: #6ab04c;
+	color: #fff;
+	padding: 4px 20px;
+	font-size: 18px;
+	border-radius: 5px;
+}
 
-		ul.features {
-			list-style-type: none;
-			text-align: left;
-			li {
-				margin: 8px;
-				.fas {
-					margin-right: 4px;
-				}
-				.fa-check-circle {
-					color: #6ab04c;
-				}
-				.fa-times-circle {
-					color: #eb4d4b;
-				}
-			}
-		}
+.plan h2 {
+	font-size: 22px;
+	margin-bottom: 12px;
+}
 
-		button {
-			border: none;
-			width: 100%;
-			padding: 12px 35px;
-			margin-top: 1rem;
-			background-color: #6ab04c;
-			color: #fff;
-			border-radius: 5px;
-			cursor: pointer;
-			font-size: 16px;
-		}
+.plan .price {
+	margin-bottom: 1rem;
+	font-size: 30px;
+}
 
-		&.popular {
-			border: 2px solid #6ab04c;
-			position: relative;
-			transform: scale(1.08);
+.plan ul.features {
+	list-style-type: none;
+	text-align: left;
+}
 
-			span {
-				position: absolute;
-				top: -20px;
-				left: 50%;
-				transform: translateX(-50%);
-				background-color: #6ab04c;
-				color: #fff;
-				padding: 4px 20px;
-				font-size: 18px;
-				border-radius: 5px;
-			}
-		}
+.plan ul.features li {
+	margin: 8px;
+}
 
-		&:hover {
-			box-shadow: 5px 7px 67px -28px rgba(0, 0, 0, 0.37);
-		}
-	}
+.plan ul.features li .fas {
+	margin-right: 4px;
+}
+
+.plan ul.features li .fa-check-circle {
+	color: #6ab04c;
+}
+
+.plan ul.features li .fa-times-circle {
+	color: #eb4d4b;
+}
+
+.plan button {
+	border: none;
+	width: 100%;
+	padding: 12px 35px;
+	margin-top: 1rem;
+	background-color: #6ab04c;
+	color: #fff;
+	border-radius: 5px;
+	cursor: pointer;
+	font-size: 16px;
+}
+
+.plan:hover {
+	box-shadow: 5px 7px 67px -28px rgba(0, 0, 0, 0.37);
 }
